Update README to reflect current docs structure